# popgetter-browser

./: .gitignore  .readthedocs.yml  index.html  pnpm-lock.yaml
.github/workflows/: ci.yml
_app/: version.json
_app/immutable/assets/: 0.B6uOnZ7c.css  0.BV1EeJyM.css  0.DEJtVUkB.css  2.2nFAMOmY.css  2.CrtUnYic.css  2.Cs0r9ilA.css  _layout.BGtkiIPk.css  _layout.BnDfU-w5.css  _layout.Bqt6U5O-.css  _layout.D0IMAsRj.css  _page.CSRgg87W.css  _page.M-G-s_O8.css  _page.RWlCW_DD.css
_app/immutable/chunks/: disclose-version.B09q5NK9.js  disclose-version.CD8_o0RQ.js  disclose-version.CJ6P83X4.js  entry.7h9tH6dW.js  entry.B21kv_nl.js  entry.B9W1ZgwB.js  entry.BF9e0Rk-.js  entry.Bb15NDd2.js  entry.BcybhsOI.js  entry.BdTcKeU6.js  entry.BouucD2q.js  entry.C-vneo2N.js  entry.C0sue7ns.js  entry.C3jDSbpm.js  entry.C5Re6r6R.js  entry.CDBbVHna.js  entry.COc-_zOz.js  entry.C_IvfM_t.js  entry.Cd4f89td.js  entry.Ce8c4A1O.js  entry.CrMWusIR.js  entry.CvvQCRTz.js  entry.Cy7450VN.js  entry.CzEgY3bS.js  entry.DBpVc-rm.js  entry.DFuakIfW.js  entry.DHnnyhTE.js  entry.Djq19Cru.js  entry.Ifpy94Sr.js  entry.KsBXHKN3.js  entry.PyY7Dj4P.js  entry.cXD8qXmT.js  entry.ce6DTOwU.js  entry.hUHizLjE.js  entry.jSFRsMRx.js  index-client.D6wIAdp4.js  index-client.Dsykefas.js  index-client.yN_PnAZr.js  index.DM8_DTYB.js  index.UF-GcHCI.js  (+10 more)
_app/immutable/entry/: app.4Gd8dK74.js  app.6MERqxjF.js  app.B65ppiNR.js  app.BBMvxLSS.js  app.BBzvCnuM.js  app.BSfi4ZuB.js  app.B_4twMw9.js  app.Bi8OF7uJ.js  app.Bj5fCUKD.js  app.BlBisTE_.js  app.BmDEByG5.js  app.BtoU6hup.js  app.C0l-0jQN.js  app.C1rjiAzI.js  app.CAlrCbRc.js  app.CH36qfNe.js  app.CMSS_D6V.js  app.Ce-R73AD.js  app.CkDeTXD-.js  app.CkedOhin.js  app.CwZ3EPWS.js  app.D0Gv9WQr.js  app.D7eJtRxH.js  app.DBzUOCMu.js  app.DbTu_6LT.js  app.DpDigfVq.js  app.I6oqSTOc.js  app.ObQIzZBI.js  app.gSAhPmAH.js  app.plOf053n.js  app.qzpiEXtB.js  app.rRlq9mwh.js  start.0FKk3AoU.js  start.3alOOK-f.js  start.ANAeQBka.js  start.B3YUwym8.js  start.B3t0tQiR.js  start.B7Feh9Q-.js  start.BA1-g73w.js  start.BBlkNMts.js  (+24 more)
_app/immutable/nodes/: 0.B1sl_DX2.js  0.COVN2ZcP.js  0.DJjPokiG.js  1.2emS61GS.js  1.B6Yidaui.js  1.B9oDyayo.js  1.BCf2ArRQ.js  1.BRPGMEVy.js  1.BWbp13iv.js  1.B_f-afy4.js  1.Beqpxw7d.js  1.BrgOlvPo.js  1.BtEiLCuc.js  1.C6UVySsv.js  1.CKk1DnBR.js  1.CPTl-PtQ.js  1.CU7qzOhe.js  1.CU8RZ_vV.js  1.CYTPMH02.js  1.CmRlX6Pp.js  1.Cr5k3ltG.js  1.CsDGkQax.js  1.CuR70Zmj.js  1.D3nzBoRx.js  1.DBd233i5.js  1.DDWOACHb.js  1.DGfmd3RL.js  1.Deb0vu5m.js  1.DiuULNuM.js  1.HhDeICeD.js  1.Hp82bksc.js  (+26 more)
docs/: index.md
popgetter-browser/: .gitignore  .readthedocs.yml  mkdocs.yml
popgetter-browser/rust_backend/: Cargo.toml
popgetter-browser/rust_backend/pkg/: rust_backend.d.ts  rust_backend.js  rust_backend_bg.wasm.d.ts
popgetter-browser/rust_backend/src/: lib.rs
popgetter-browser/web/: package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
v0/: README.md  package.json  pnpm-lock.yaml
(+30 files in other folders)
