[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.82"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
geo = "0.28.0"
geojson = { version = "0.24.1", features = ["geo-types"] }
js-sys = "0.3.69"
log = "0.4.20"
serde = "1.0.188"
serde_json = "1.0.105"
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = { version = "0.2.92", features = ["strict-macro"] }
web-sys = { version = "0.3.64", features = ["console"] }
web-time = "1.1.0"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
polars = { git = "https://github.com/Urban-Analytics-Technology-Platform/polars.git", branch = "parquet-wasm", default-features = false, features = [
    "fmt_no_tty",
] }
# popgetter = { git = "https://github.com/Urban-Analytics-Technology-Platform/popgetter-cli.git", branch = "73-wasm", default-features = false, features = [
#     "wasm",
# ] }
popgetter = { git = "https://github.com/Urban-Analytics-Technology-Platform/popgetter-cli.git", rev = "77bbcee2b0b261158b5f80706ab36236f9c30eaa", default-features = false, features = [
    "wasm",
] }

wasm-bindgen-futures = "0.4.42"

[dev-dependencies]
wasm-bindgen-test = "0.3.42" # polars = { path = "../../../polars/crates/polars", default-features = false }

# For local development, build dependencies in release mode once, but otherwise
# use dev profile and avoid wasm-opt.
[profile.dev.package."*"]
opt-level = 3
